Added more colors for code listings (codeA and codeB)

--- a/docs/glfwdoc.sty
+++ b/docs/glfwdoc.sty
@@ -1,6 +1,6 @@
 %-------------------------------------------------------------------------
 % Common document formatting and macros for GLFW manuals
-% $Id: glfwdoc.sty,v 1.7 2003-11-14 21:26:45 marcus256 Exp $
+% $Id: glfwdoc.sty,v 1.8 2003-11-22 21:14:10 marcus256 Exp $
 %-------------------------------------------------------------------------
 
 % Misc. document info
@@ -57,6 +57,8 @@
 % Colors
 \definecolor{code}{rgb}{0.9,0.9,1.0}
 \definecolor{link}{rgb}{0.6,0.0,0.0}
+\definecolor{codeA}{rgb}{0.9,1.0,0.9}
+\definecolor{codeB}{rgb}{1.0,0.9,0.9}
 
 % Code listings
 \lstset{frame=single,frameround=tttt,backgroundcolor=\color{code},%
